# bazel-toolchains

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  apply_package_updates.py  update_packages.py
.github/workflows/: ci.yml  test-containers.yml  update-packages.yml
autosd_10_gcc/: BUILD.bazel  extensions.bzl
autosd_9_gcc/: BUILD.bazel  extensions.bzl
centos_gcc/: BUILD.bazel  extensions.bzl
common/: BUILD.bazel  BUILD.bazel.template  cc_toolchain_config.bzl.template  setup_toolchain.sh  toolchain_utils.bzl
constraints/: BUILD.bazel
containers/: Containerfile.autosd9  Containerfile.autosd9_host  README.md
examples/custom_flags/: BUILD.bazel  MODULE.bazel  README.md  main.c  main.cpp
examples/external_lib/: BUILD.bazel  MODULE.bazel  README.md  main.cpp
examples/simple_c/: BUILD.bazel  MODULE.bazel  README.md  hello.c
fedora_gcc/: BUILD.bazel  BUILD.bazel.template  cc_toolchain_config.bzl.template  extensions.bzl
host_gcc/: BUILD.bazel  BUILD.bazel.template  cc_toolchain_config.bzl.template  extensions.bzl
