# Multi-Distribution GCC Toolchains
# This package provides isolated GCC toolchains built from various Linux distribution RPM packages

package(default_visibility = ["//visibility:public"])

# Convenience aliases to Fedora toolchain
alias(
    name = "fedora_gcc_toolchain",
    actual = "//fedora_gcc:gcc_toolchain",
)

alias(
    name = "fedora_gcc_toolchain_linux_x86_64",
    actual = "//fedora_gcc:gcc_toolchain_linux_x86_64",
)

alias(
    name = "fedora_gcc_toolchain_linux_aarch64",
    actual = "//fedora_gcc:gcc_toolchain_linux_aarch64",
)

# Convenience aliases to AutoSD 10 toolchain
alias(
    name = "autosd_10_gcc_toolchain",
    actual = "//autosd_10_gcc:gcc_toolchain",
)

alias(
    name = "autosd_10_gcc_toolchain_linux_x86_64",
    actual = "//autosd_10_gcc:gcc_toolchain_linux_x86_64",
)

alias(
    name = "autosd_10_gcc_toolchain_linux_aarch64",
    actual = "//autosd_10_gcc:gcc_toolchain_linux_aarch64",
)

# Convenience aliases to AutoSD 9 toolchain
alias(
    name = "autosd_9_gcc_toolchain",
    actual = "//autosd_9_gcc:gcc_toolchain",
)

alias(
    name = "autosd_9_gcc_toolchain_linux_x86_64",
    actual = "//autosd_9_gcc:gcc_toolchain_linux_x86_64",
)

alias(
    name = "autosd_9_gcc_toolchain_linux_aarch64",
    actual = "//autosd_9_gcc:gcc_toolchain_linux_aarch64",
)

# Convenience aliases to Host toolchain
alias(
    name = "host_gcc_toolchain",
    actual = "//host_gcc:gcc_toolchain",
)

alias(
    name = "host_gcc_toolchain_linux_x86_64",
    actual = "//host_gcc:gcc_toolchain_linux_x86_64",
)

alias(
    name = "host_gcc_toolchain_linux_aarch64",
    actual = "//host_gcc:gcc_toolchain_linux_aarch64",
)