module(
    name = "multi_gcc_toolchain",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "0.0.8")

# Register Fedora GCC extension
fedora_gcc_ext = use_extension("//fedora_gcc:extensions.bzl", "fedora_gcc_extension")
use_repo(fedora_gcc_ext, "fedora_gcc_repo")

# Register AutoSD 10 GCC extension
autosd_10_gcc_ext = use_extension("//autosd_10_gcc:extensions.bzl", "autosd_10_gcc_extension")
use_repo(autosd_10_gcc_ext, "autosd_10_gcc_repo")

# Register AutoSD 9 GCC extension
autosd_9_gcc_ext = use_extension("//autosd_9_gcc:extensions.bzl", "autosd_9_gcc_extension")
use_repo(autosd_9_gcc_ext, "autosd_9_gcc_repo")

# Register Host GCC extension
host_gcc_ext = use_extension("//host_gcc:extensions.bzl", "host_gcc_extension")
use_repo(host_gcc_ext, "host_gcc_repo")

# Note: Toolchains are not auto-registered here.
# Users should register the specific toolchain they want in their own MODULE.bazel:
#
# For Fedora 42:
#   register_toolchains("@fedora_gcc_repo//:gcc_toolchain_linux_x86_64")
#
# For AutoSD 10:
#   register_toolchains("@autosd_10_gcc_repo//:gcc_toolchain_linux_x86_64")
#
# For AutoSD 9:
#   register_toolchains("@autosd_9_gcc_repo//:gcc_toolchain_linux_x86_64")
#
# For Host:
#   register_toolchains("@host_gcc_repo//:gcc_toolchain_linux_x86_64")
