# AutoSD 9 GCC Toolchain
# This package provides an isolated GCC toolchain built from AutoSD 9 (CentOS Stream 9) RPM packages

package(default_visibility = ["//visibility:public"])

# Export the extension for use by other modules
exports_files([
    "extensions.bzl",
])

# Convenience aliases to the generated toolchain
alias(
    name = "gcc_toolchain",
    actual = "@autosd_9_gcc_repo//:gcc_toolchain",
)

# Architecture-specific toolchain aliases
alias(
    name = "gcc_toolchain_linux_x86_64",
    actual = "@autosd_9_gcc_repo//:gcc_toolchain_linux_x86_64",
)

alias(
    name = "gcc_toolchain_linux_aarch64",
    actual = "@autosd_9_gcc_repo//:gcc_toolchain_linux_aarch64",
)
