# Common utilities for GCC toolchains
# This package provides shared code for all distribution-specific toolchains

package(default_visibility = ["//visibility:public"])

# Export the shared utilities and templates
exports_files([
    "toolchain_utils.bzl",
    "BUILD.bazel.template",
    "cc_toolchain_config.bzl.template",
])