module(
    name = "simple_c_example",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "0.0.8")

# Use the multi-toolchain dependency from the parent directory
local_path_override(
    module_name = "multi_gcc_toolchain",
    path = "../..",
)
bazel_dep(name = "multi_gcc_toolchain", version = "1.0.0")

# Example: Use the Host GCC toolchain (fastest, uses system GCC)
host_gcc = use_extension("@multi_gcc_toolchain//host_gcc:extensions.bzl", "host_gcc_extension")
use_repo(host_gcc, "host_gcc_repo")
register_toolchains("@host_gcc_repo//:gcc_toolchain_linux_x86_64")

# Alternative: Use the Fedora GCC toolchain (isolated, downloads RPMs)
# fedora_gcc = use_extension("@multi_gcc_toolchain//fedora_gcc:extensions.bzl", "fedora_gcc_extension")
# use_repo(fedora_gcc, "fedora_gcc_repo")
# register_toolchains("@fedora_gcc_repo//:gcc_toolchain_linux_x86_64")

# Alternative: Use the CentOS GCC toolchain (isolated, downloads RPMs)
# centos_gcc = use_extension("@multi_gcc_toolchain//centos_gcc:extensions.bzl", "centos_gcc_extension")
# use_repo(centos_gcc, "centos_gcc_repo")
# register_toolchains("@centos_gcc_repo//:gcc_toolchain_linux_x86_64")
